# libmatheval-no-guile

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libmatheval.pc  libmatheval.pc.in  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
doc/: Makefile.am  libmatheval.texi
lib/: Makefile  Makefile.am  Makefile.in  common.h  error.c  error.h  g77_interface.c  g77_interface.lo  libmatheval.la  matheval.c  matheval.h  matheval.lo  node.c  node.h  node.lo  parser.c  parser.h  parser.y  scanner.c  scanner.l  scanner.lo  symbol_table.c  symbol_table.h  symbol_table.lo  xmalloc.c  xmalloc.h  xmath.c  xmath.h  xmath.lo
lib/.deps/: error.Plo  g77_interface.Plo  matheval.Plo  node.Plo  parser.Plo  scanner.Plo  symbol_table.Plo  xmalloc.Plo  xmath.Plo
lib/.libs/: libmatheval.la  libmatheval.lai  libmatheval.so.1.0.0
tests/: Makefile.am  basics.at  bin_ops.at  constants.at  functions.at  matheval.c  matheval.sh.in  numbers.at  package.m4  testsuite.at  un_ops.at  variables.at
